--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name=backend
+server.address=0.0.0.0
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.datasource.platform=h2
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
