--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve"
+    "start": "ng serve",
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
