--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 server.address=0.0.0.0
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
